hero.correction mobile version

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,7 +1,6 @@
 
    .hero {
     margin: 0 auto;
-    margin-bottom: 96px;
     padding: 112px 0;
     width: 100%;
     background-size: cover;
